--- a/build.gradle
+++ b/build.gradle
@@ -12,5 +12,7 @@ repositories {
 
 dependencies {
   compile "org.codehaus.groovy:groovy-all:2.4.1"
+  testRuntime "cglib:cglib-nodep:3.1"
+  testRuntime "org.objenesis:objenesis:2.1"
   testCompile "org.spockframework:spock-core:1.0-groovy-2.4"
 }
